Bug 1676344 - Treat TEXT_CONTAINER accessibles between tables and table rows, as well as table rows and cells, as presentational, r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D96532