accessible/base/nsAccessibilityService.cpp
@@ -1467,14 +1467,20 @@ nsAccessibilityService::CreateAccessibleByFrameType(nsIFrame* aFrame,
     case eHTMLTextFieldType:
       newAcc = new HTMLTextFieldAccessible(aContent, document);
       break;
-    case eHyperTextType:
+    case eHyperTextType: {
+      if (aContext->IsTable() || aContext->IsTableRow()) {
+        // This is some generic hyperText, for example a block frame element
+        // inserted between a table and table row. Treat it as presentational.
+        return nullptr;
+      }
+
       if (!aContent->IsAnyOfHTMLElements(nsGkAtoms::dt, nsGkAtoms::dd,
                                          nsGkAtoms::div, nsGkAtoms::thead,
                                          nsGkAtoms::tfoot, nsGkAtoms::tbody)) {
         newAcc = new HyperTextAccessibleWrap(aContent, document);
       }
       break;
-
+    }
     case eImageType:
       newAcc = new ImageAccessibleWrap(aContent, document);
       break;
